PROJECT(dgps)
SET(PROJECT_VERSION 1.0)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
INCLUDE(FindPkgConfig)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g")
MACRO(CMAKE_USE_FULL_RPATH install_rpath)
    SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
    SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE) 
    SET(CMAKE_INSTALL_RPATH ${install_rpath})
    SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
ENDMACRO(CMAKE_USE_FULL_RPATH)
CMAKE_USE_FULL_RPATH("${CMAKE_INSTALL_PREFIX}/lib")

pkg_check_modules(DFKI_TYPES REQUIRED "dfki-types")
INCLUDE_DIRECTORIES(${DFKI_TYPES_INCLUDE_DIRS})
LINK_DIRECTORIES(${DFKI_TYPES_LIBRARY_DIRS})

pkg_check_modules(IO REQUIRED "iodrivers_base")
INCLUDE_DIRECTORIES(${IO_INCLUDE_DIRS})
LINK_DIRECTORIES(${IO_LIBRARY_DIRS})

ADD_LIBRARY(dgps SHARED dgps.cc)
TARGET_LINK_LIBRARIES(dgps ${DFKI_TYPES_LIBRARIES} ${IO_LIBRARIES})

ADD_EXECUTABLE(dgps_test dgps_test.cc)
TARGET_LINK_LIBRARIES(dgps_test dgps)

#ADD_EXECUTABLE(dgps_acq dgps_acq.cc)
#TARGET_LINK_LIBRARIES(dgps_acq dgps)

INSTALL(TARGETS dgps #dgps_acq
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib)
INSTALL(FILES dgps.hh dgpstypes.hh DESTINATION include)

CONFIGURE_FILE(Doxyfile.in Doxyfile @ONLY)
ADD_CUSTOM_TARGET(doc doxygen Doxyfile)

CONFIGURE_FILE(dgps.pc.in dgps.pc @ONLY)
INSTALL(FILES ${CMAKE_BINARY_DIR}/dgps.pc DESTINATION lib/pkgconfig)

